--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
     "demo"
   ],
   "author": "Kenni Bawden",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "browser-launcher": "^1.0.0",
+    "browserify": "^6.3.2",
+    "connect": "^3.3.3",
+    "fs": "0.0.2",
+    "http-proxy": "^1.6.1",
+    "rtc-capture": "^1.0.2",
+    "rtc-media": "^1.10.0",
+    "rtc-screenshare": "^2.0.0"
+  }
 }
